--- a/public/styles/style10.css
+++ b/public/styles/style10.css
@@ -5,9 +5,12 @@
 	justify-content: center;
 	align-items: center;
     background: #05060B;
+    position: relative;
+    overflow-x: hidden;
 }
 .members__section1 {
     width: 1290px;
+    z-index: 1;
     height: 1043px;
 }
 .members__section1-title {
@@ -19,6 +22,13 @@
     color: #FFFFFF;
     margin-top: 110px;
     margin-bottom: 45px;
+}
+.wrap_wave {
+  position: absolute;
+  top: 122px;
+}
+#wave_big {
+  z-index: -1;
 }
 .members__section1-container {
     width: 1070px;
@@ -39,6 +49,18 @@
     border-radius: 30px;
     cursor: pointer;
 }
+.members__container-block:hover {
+  background: #F6DBA8;
+  box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+  color: black;
+}
+.members__container-block:hover .members__container-paragraph {
+  color: black;
+}
+.members__container-block:hover .members__container-title {
+  color: black;
+}
+
 .members__special-block {
     background: #F6DBA8;
     box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
