--- a/public/styles/style5.css
+++ b/public/styles/style5.css
@@ -5,6 +5,8 @@
 	justify-content: center;
 	align-items: center;
     background-color: #111419;
+    position: relative;
+    z-index: 1;
 }
 .footer {
     margin: 70px 0px;
