--- a/public/styles/style6.css
+++ b/public/styles/style6.css
@@ -15,7 +15,18 @@
     margin-bottom: 90px;
     width: 100%;
     height: 391.28px;
-    box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+}
+.hoo {
+    z-index: 1;
+    position: relative;
+    top: -1069px;
+}
+.event-img2 {
+    position: absolute;
+    left: -314px;
+    width: 1;
+    height: auto;
+    top: -26px;
 }
 .association1__about-title {
     font-family: "WorkSans-Bold";
@@ -25,10 +36,14 @@
     line-height: 130%;
     color: #FFFFFF;
     margin-bottom: 4px;
+    position: relative;
+    z-index: 1000;
 }
 .association1__about-container {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 1000;
 }
 .association1__about-paragraph1 {
     font-family: "WorkSans-Regular";
