--- a/public/styles/tablet4.css
+++ b/public/styles/tablet4.css
@@ -1,8 +1,18 @@
+@media (min-width: 991px) {
+  .wrap_wave2 {
+    display: none;
+  }
+}
 @media (min-width: 768px) and (max-width: 991px) {
     .association1,
     .association2,
     .association3 {
         width: 730px;
+    }
+    .wrap_wave2 {
+      display: block;
+      position: absolute;
+      top: 585px;
     }
     .association1 {
         height: 1424px;
@@ -104,4 +114,43 @@
         width: 243px;
         height: 50px;
     }
+}
+@media (min-width: 800px) and (max-width: 991px) {
+  .wrap_wave2 {
+    top: 490px !important;
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+        transform: scale(0.8);
+  }
+}
+@media (min-width: 768px) and (max-width: 800px) {
+  .wrap_wave2 {
+    top: 495px !important;
+    -webkit-transform: scale(0.76);
+    -ms-transform: scale(0.76);
+        transform: scale(0.76);
+  }
+}
+@media (min-width: 700px) and (max-width: 768px) {
+  .wrap_wave2 {
+    position: absolute;
+    top: 430px;
+    -webkit-transform: scale(0.64);
+    -ms-transform: scale(0.64);
+        transform: scale(0.64);
+  }
+}
+@media (min-width: 320px) and (max-width: 700px) {
+  .wrap_wave2 {
+    position: absolute;
+    top: 420px;
+    -webkit-transform: scale(0.54);
+    -ms-transform: scale(0.54);
+        transform: scale(0.54);
+  }
+}
+@media (min-width: 320px) and (max-width: 576px) {
+  .wrap_wave2 {
+    top: 466px !important;
+  }
 }
