--- a/public/styles/style9.css
+++ b/public/styles/style9.css
@@ -29,6 +29,8 @@
     line-height: 130%;
     color: #FFFFFF;
     margin-bottom: 4px;
+    z-index: 1000;
+    position: relative;
 }
 .event__section-paragraph {
     font-family: "WorkSans-Regular";
